updated added romanian translation
2002-09-18  Marius Andreiana <mandreiana@yahoo.com>

        * po/ro.po: updated
	* stylesheets/l10n.xml: added romanian translation

--- a/po/ro.po
+++ b/po/ro.po
@@ -102,7 +102,7 @@ msgstr "Administrare sistem"
 
 #: src/yelp-view-content.c:420 src/yelp-view-index.c:498
 msgid "Section"
-msgstr "Secţie"
+msgstr "Secţiune"
 
 #: src/yelp-view-content.c:555 src/yelp-view-index.c:562
 msgid "Loading..."
