--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-18  Marius Andreiana <mandreiana@yahoo.com>
+
+	* l10n.xml: added Romanian translation
+
 2002-06-03  Mikael Hallendal  <micke@codefactory.se>
 
 	* docbook/catalog.in: updated
