--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-18  Marius Andreiana <mandreiana@yahoo.com>
+
+        * ro.po: updated
+
 2002-09-01  Marius Andreiana <mandreiana@yahoo.com>
 
 	* ro.po: added ( thanks to Mugurel Tudor <mugurelu@go.ro> )
