--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-18  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* l10n.xml: Added Norwegian (bokmål) translation.
+	
 2002-08-04  James Henstridge  <james@daa.com.au>
 
 	* docbook/dtd/ent/iso-num.ent: 
