--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2002-09-23  Sander Vesik <sander.vesik@sun.com>
+
+	* stylesheets/yelp-customization.xsl:
+	- fix some cases of 'next' not leading anywhere on the TOC page
+	- fix user guide documents occasionaly having the 'Previous' link
+	  point to nowhere in the chunk "following" TOC
+
 2002-09-20  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-window.c: changed to reflect changes in the views.
