--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2002-09-23  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-db2html.c: Don't include libgnome and gnome-vfs stuff.
+
+	* configure.in: Added DB2HTML_* variables.
+
+	* src/Makefile.am (test_uri_LDADD): use special LIBS for
+	  yelp-db2html.
+
 2002-09-18  Padraig O'Briain  <padraig.obriain@sun.com>
 
 	* src/yelp-view-content.c (content_reader_finished_cb):
