--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2002-10-04  Mikael Hallendal  <micke@codefactory.se>
+
+	* NEWS: updated for 2.1.0
+
+	* configure.in: bumped version to 2.1.0, did a large jump here to
+	  reach GNOME version numbers.
+
+	* autogen.sh: don't use gnome-common
+
 2002-09-23  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-db2html.c: Don't include libgnome and gnome-vfs stuff.
