--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Changes in 2.1.0:
+-----------------
+
+* Added pregeneration of HTML cache.            (Narayana Pattipati)
+* Stylesheet updates                            (sander Vesik)
+* Internal cleanups                             (Mikael Hallendal)
+* a11y fix                                      (Padraig O'Briain)
+* Linking error                                 (Mikael Hallendal)
+
 Changes in 1.0.6:
 -----------------
 
