--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-10-04  Marius Andreiana <mandreiana@yahoo.com>
+
+	* stylesheets/yelp-customization.xsl: made translatable the
+	following strings: Next,Previous,Contents,About This Document
+	* stylesheets/l10n.xml: added strings Next,Previous,Contents
+	
 2002-10-04  Mikael Hallendal  <micke@codefactory.se>
 
 	* NEWS: updated for 2.1.0
