made translatable the following strings: Next/Previous/Contents/About This
2002-10-04  Marius Andreiana <mandreiana@yahoo.com>

        * stylesheets/yelp-customization.xsl: made translatable the
        following strings: Next/Previous/Contents/About This Document
        * stylesheets/l10n.xml: added strings Next/Previous/Contents

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-10-04  Marius Andreiana <mandreiana@yahoo.com>
+
+	* stylesheets/yelp-customization.xsl: made translatable the
+	following strings: Next/Previous/Contents/About This Document
+	* stylesheets/l10n.xml: added strings Next/Previous/Contents
+
 2002-09-23  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-db2html.c: Don't include libgnome and gnome-vfs stuff.
