--- a/po/he.po
+++ b/po/he.po
@@ -3,17 +3,19 @@
 # This file is distributed under the same license as the PACKAGE package.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # Gil Osher <dolfin@rpg.org.il>, 2002
+# Gil 'Dolfin' Osher <dolfin@rpg.org.il>, 2002
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp.gnome-2-0.he\n"
 "POT-Creation-Date: 2002-09-07 05:15+0200\n"
-"PO-Revision-Date: 2002-09-08 14:21+0300\n"
-"Last-Translator: Gil Osher <dolfin@rpg.org.il>\n"
+"PO-Revision-Date: 2002-10-14 20:20+0200\n"
+"Last-Translator: Gil 'Dolfin' Osher <dolfin@rpg.org.il>\n"
 "Language-Team: Hebrew <he@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.0beta2\n"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -213,8 +215,11 @@ msgstr "המסמך '%s' אינו קיים"
 #: src/yelp-window.c:598
 msgid "translator_credits"
 msgstr ""
-"גיל אשר/n "
-"dolfin@rpg.org.il"
+"גיל אשר\n"
+"dolfin@rpg.org.il\n"
+"\n"
+"פרוייקט linBrew\n"
+"http://linbrew.sourceforge.net"
 
 #: src/yelp-window.c:602
 msgid "Help Browser for GNOME 2.0"
