--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-18  Andras Timar  <timar@gnome.hu>
+
+	* hu.po: Terminology fixes.
+
 2002-10-05  Daniel Yacob  <locales@geez.org>
 
 	* am.po: Updated Amharic translations.
