--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-18  Andras Timar  <timar@gnome.hu>
+
+	* hu.po: Updated Hungarian translation.
+
 2002-09-18  Marius Andreiana <mandreiana@yahoo.com>
 
         * ro.po: updated
