--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,25 @@
+2002-10-21  Richard Hult  <rhult@codefactory.se>
+
+	* src/yelp-view-content.c (content_show_uri): Don't try to set
+	focus on view, use view->widget.
+
+	* src/yelp-view-toc.c (toc_get_html):
+	* src/yelp-view-index.c (index_get_html):
+	* src/yelp-view.c (yelp_view_get_html): Implement
+	YelpView::get_html.
+
+	* src/yelp-view.h: Add virtual function get_html that returns the
+	YelpHtml used by the view.
+
+	* src/yelp-html-gtkhtml2.c (yelp_html_find_next): Implement.
+
+	* src/yelp-html.h (yelp_html_find_next): Add virtual function
+	find_next.
+
+	* src/yelp-window.c (window_find_cb): The start of find
+	functionality, needs more work.
+	(window_init): Remove unused view_current variable.
+
 2002-10-19  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/Makefile.am (yelp_LDADD): link with POPT_LIBS. 
