--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+Changes in 2.1.1:
+-----------------
+
+* i18n fixes to stylesheets                     (Paolo Maggi)
+* Use GnomeApp instead of GtkWindow             (Paolo Maggi)
+* Fix crash when loading external files         (Mikael Hallendal,
+                                                 Paolo Maggi)
+* Support 'yelp index:' to show index page      (Mikael Hallendal)
+* Updated hungarian translation                 (Andras Timar)
+
 Changes in 2.1.0:
 -----------------
 
