--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-21  Andras Timar  <timar@gnome.hu>
+
+	* hu.po: s/ucirc/udblac/
+
 2002-10-18  Andras Timar  <timar@gnome.hu>
 
 	* hu.po: Updated Hungarian translation.
