--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2002-10-29  Richard Hult  <rhult@codefactory.se>
+
+	* src/yelp-window.c (window_find_response_cb)
+	(window_find_delete_event_cb, window_find_cb): Use the find
+	dialog.
+
+	* src/yelp-html-gtkhtml2.c (yelp_html_find): Implement find
+	forward.
+
+	* data/ui/yelp.glade: Steal galeons find dialog.
+
+	* configure.in: Add libglade dependency.
+
 2002-10-27  Richard Hult  <rhult@codefactory.se>
 
 	* src/yelp-pregenerate.c (main): Don't create GNodes with g_new,
