--- a/po/am.po
+++ b/po/am.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp VERSION\n"
 "POT-Creation-Date: 2002-10-03 05:37+0200\n"
-"PO-Revision-Date: 2002-10-03 21:38+EST\n"
+"PO-Revision-Date: 2002-10-29 09:27+EDT\n"
 "Last-Translator: Ge'ez Frontier Foundation <locales@geez.org>\n"
 "Language-Team: Amharic <locales@geez.org>\n"
 "MIME-Version: 1.0\n"
@@ -185,7 +185,7 @@ msgstr "ውደ/_ፊት"
 
 #: src/yelp-window.c:166
 msgid "/Go/_Home"
-msgstr "/ወደ/_ማነሻ"
+msgstr "/ወደ/_መጀመሪያ"
 
 #: src/yelp-window.c:167
 msgid "/Go/_Index"
