--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-29  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* no.po: Updated Norwegian (bokmål) translation.
+	
 2002-10-21  Andras Timar  <timar@gnome.hu>
 
 	* hu.po: s/ucirc/udblac/
