--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,12 @@
 2002-10-29  Richard Hult  <rhult@codefactory.se>
 
+	* src/yelp-html-gtkhtml2.c (yelp_html_find): Implement find
+	backward.
+
 	* src/yelp-window.c (window_find_response_cb)
 	(window_find_delete_event_cb, window_find_cb): Use the find
 	dialog.
+	(window_find_again_cb): Implement.
 
 	* src/yelp-html-gtkhtml2.c (yelp_html_find): Implement find
 	forward.
