--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Changes in 2.1.2:
+-----------------
+
+* Search in page                                (Richard Hult)
+* Fixes to yelp-pregenerate                     (Richard Hult)
+* Updated Norwegian (bokmål) translation        (Kjartan Maraas)
+
 Changes in 2.1.1:
 -----------------
 
