--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2002-11-01  Mikael Hallendal  <micke@codefactory.se>
+
+	* Release 2.1.2
+
+	* NEWS: Updated for 2.1.2
+
+	* configure.in: 
+	- Bumped to 2.1.2
+	- Require gtkhtml2 2.1.2
+
 2002-10-29  Richard Hult  <rhult@codefactory.se>
 
 	* src/yelp-html-gtkhtml2.c (yelp_html_find): Implement find
