configure.in: Added Belarusian to ALL_LINGUAS

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-03  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
+
+	* configure.in: Added Belarusian to ALL_LINGUAS
+
 2002-11-01  Mikael Hallendal  <micke@codefactory.se>
 
 	* Release 2.1.2
