--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-03  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
+
+	* configure.in: Added Belarusian to ALL_LINGUAS
+
 2002-10-21  jacob berkman  <jacob@ximian.com>
 
 	* src/yelp-reader.c (yelp_reader_start): fix build (move str_uri
