--- a/po/am.po
+++ b/po/am.po
@@ -6,7 +6,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp VERSION\n"
+"Project-Id-Version: yelp 1.0\n"
 "POT-Creation-Date: 2002-10-03 05:37+0200\n"
 "PO-Revision-Date: 2002-10-29 09:27+EDT\n"
 "Last-Translator: Ge'ez Frontier Foundation <locales@geez.org>\n"
@@ -193,7 +193,7 @@ msgstr "/ወደ/_ማውጫ"
 
 #: src/yelp-window.c:168
 msgid "/_Help"
-msgstr "መረጃ"
+msgstr "_መረጃ"
 
 #: src/yelp-window.c:169
 msgid "/Help/_About"
@@ -212,7 +212,7 @@ msgstr "'%s' የተባለው ሰነድ የለም"
 #. * will shop up in the "about" box
 #: src/yelp-window.c:598
 msgid "translator_credits"
-msgstr "የግዕዝ Frontier Foundation"
+msgstr "ዘግዕዝ Frontier Foundation"
 
 #: src/yelp-window.c:602
 msgid "Help Browser for GNOME 2.0"
