--- a/po/am.po
+++ b/po/am.po
@@ -177,7 +177,7 @@ msgstr "/_ወደ"
 
 #: src/yelp-window.c:164
 msgid "/Go/_Back"
-msgstr "ወደ/_ኋላ"
+msgstr "/ወደ/_ኋላ"
 
 #: src/yelp-window.c:165
 msgid "/Go/_Forward"
@@ -193,7 +193,7 @@ msgstr "/ወደ/_ማውጫ"
 
 #: src/yelp-window.c:168
 msgid "/_Help"
-msgstr "_መረጃ"
+msgstr "/_መረጃ"
 
 #: src/yelp-window.c:169
 msgid "/Help/_About"
