--- a/po/am.po
+++ b/po/am.po
@@ -173,23 +173,23 @@ msgstr "/ፋይል/_መስኮት ዝጋ"
 #. {N_("/File/_Quit"),         NULL,         window_exit_cb,         0,                           "<StockItem>", GTK_STOCK_QUIT    },
 #: src/yelp-window.c:163
 msgid "/_Go"
-msgstr "/_ወደ"
+msgstr "/_ሂድ ወደ"
 
 #: src/yelp-window.c:164
 msgid "/Go/_Back"
-msgstr "/ወደ/_ኋላ"
+msgstr "/ሂድ ወደ/_ኋላ"
 
 #: src/yelp-window.c:165
 msgid "/Go/_Forward"
-msgstr "ውደ/_ፊት"
+msgstr "ሂድ ውደ/_ፊት"
 
 #: src/yelp-window.c:166
 msgid "/Go/_Home"
-msgstr "/ወደ/_መጀመሪያ"
+msgstr "/ሂድ ወደ/_መጀመሪያ"
 
 #: src/yelp-window.c:167
 msgid "/Go/_Index"
-msgstr "/ወደ/_ማውጫ"
+msgstr "/ሂድ ወደ/_ማውጫ"
 
 #: src/yelp-window.c:168
 msgid "/_Help"
