--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-05  Laurent Dhima  <laurenti@alblinux.net>
+
+	* sq.po: Added Albanian translation
+
 2002-11-03  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
 
 	* be.po: Added Belarusian translation
@@ -5,7 +9,7 @@
 
 2002-10-29  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokmål) translation.
+	* no.po: Updated Norwegian (bokmï¿½) translation.
 	
 2002-10-21  Andras Timar  <timar@gnome.hu>
 
@@ -23,10 +27,10 @@
 
 	* ro.po: added ( thanks to Mugurel Tudor <mugurelu@go.ro> )
 
-2002-08-27  Germán Poo Caamaño <gpoo@ubiobio.cl>
+2002-08-27  Germï¿½ Poo Caamao <gpoo@ubiobio.cl>
 
 	* es.po: Updated Spanish translation from 
-	Juan Manuel García Molina <juanma_gm@wanadoo.es>
+	Juan Manuel Garcï¿½ Molina <juanma_gm@wanadoo.es>
 
 2002-08-05  Duarte Loreto <happyguy_pt@hotmail.com>
 
@@ -92,7 +96,7 @@
 
 2002-07-02  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokmål) translation.
+	* no.po: Updated Norwegian (bokmï¿½) translation.
 	
 2002-06-30  Zbigniew Chyla  <chyla@gnome.pl>
 
@@ -103,7 +107,7 @@
 
 	* ru.po: updated Russian translation.
 
-2002-06-30  Tõivo Leedjärv  <toivo@linux.ee>
+2002-06-30  Tivo Leedjï¿½v  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -163,7 +167,7 @@
 
 	* ca.po: Catalan fix.
 
-2002-06-06  Tõivo Leedjärv  <toivo@linux.ee>
+2002-06-06  Tivo Leedjï¿½v  <toivo@linux.ee>
 
 	* et.po: Fix.
 
@@ -171,14 +175,14 @@
 
 	* sv.po: Fix.
 
-2002-06-02  Germán Poo Caamaño <gpoo@ubiobio.cl>
+2002-06-02  Germï¿½ Poo Caamao <gpoo@ubiobio.cl>
 
 	* es.po: Updated Spanish translation from 
-	Juan Manuel García Molina <juanma_gm@wanadoo.es>
+	Juan Manuel Garcï¿½ Molina <juanma_gm@wanadoo.es>
 
-2002-06-01  Carlos Perelló Marín <carlos@gnome-db.org>
+2002-06-01  Carlos Perell Marï¿½ <carlos@gnome-db.org>
 
-	* es.po: Updated by Juan Manuel García Molina <juanma_gm@wanadoo.es>
+	* es.po: Updated by Juan Manuel Garcï¿½ Molina <juanma_gm@wanadoo.es>
 
 2002-06-01  Jesus Bravo Alvarez  <jba@pobox.com>
 
@@ -229,7 +233,7 @@
 
 2002-05-07  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokmål) translation.
+	* no.po: Updated Norwegian (bokmï¿½) translation.
 	
 2002-05-07  Christophe Merlet  <christophe@merlet.net>
 
@@ -261,10 +265,10 @@
 
 	* vi.po: Updated Vietnamese file
 
-2002-05-01  Germán Poo-Caamaño  <gpoo@ubiobio.cl>
+2002-05-01  Germï¿½ Poo-Caamao  <gpoo@ubiobio.cl>
 
 	* es.po: Updated Spanish translation from
-	Juan Manuel García Molina <juanma_gm@wanadoo.es>
+	Juan Manuel Garcï¿½ Molina <juanma_gm@wanadoo.es>
 
 2002-05-01  Mikael Hallendal  <micke@codefactory.se>
 
@@ -283,13 +287,13 @@
 	* vi.po: Added Vietnamese file
 	* wa.po: Updated Walloon file
 
-2002-04-26  Tõivo Leedjärv  <toivo@linux.ee>
+2002-04-26  Tivo Leedjï¿½v  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
 2002-04-23  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokmål) translation.
+	* no.po: Updated Norwegian (bokmï¿½) translation.
 	
 2002-04-22  Takeshi Aihana <aihana@gnome.gr.jp>
 
