--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-11  Fatih Demir <kabalak@gtranslator.org>
+
+	* ta.po: Added Tamil translation by Dinesh.
+
 2002-11-03  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
 
 	* be.po: Added Belarusian translation
