--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-12  Laurent Dhima <laurenti@alblinux.net>
+
+	* sq.po: Added Albanian translation.
+
 2002-11-11  Fatih Demir <kabalak@gtranslator.org>
 
 	* ta.po: Added Tamil translation by Dinesh.
@@ -25,7 +29,7 @@
 
 2002-09-19  Fatih Demir <kabalak@gtranslator.org>
 
-	* tr.po: Committed updated Turkish translation by Ömer.
+	* tr.po: Committed updated Turkish translation by ï¿½er.
 
 2002-09-16  Pablo Gonzalo del Campo <pablodc@bigfoot.com>
 
@@ -141,7 +145,7 @@
 
 2002-07-02  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokmål) translation.
+	* no.po: Updated Norwegian (bokmï¿½) translation.
 	
 2002-06-30  Zbigniew Chyla  <chyla@gnome.pl>
 
@@ -152,7 +156,7 @@
 
 	* ru.po: updated Russian translation.
 
-2002-06-30  Tõivo Leedjärv  <toivo@linux.ee>
+2002-06-30  Tivo Leedjï¿½v  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -212,7 +216,7 @@
 
 	* ca.po: Catalan fix.
 
-2002-06-06  Tõivo Leedjärv  <toivo@linux.ee>
+2002-06-06  Tivo Leedjï¿½v  <toivo@linux.ee>
 
 	* et.po: Fix.
 
@@ -220,14 +224,14 @@
 
 	* sv.po: Fix.
 
-2002-06-02  Germán Poo Caamaño <gpoo@ubiobio.cl>
+2002-06-02  Germï¿½ Poo Caamao <gpoo@ubiobio.cl>
 
 	* es.po: Updated Spanish translation from 
-	Juan Manuel García Molina <juanma_gm@wanadoo.es>
+	Juan Manuel Garcï¿½ Molina <juanma_gm@wanadoo.es>
 
-2002-06-01  Carlos Perelló Marín <carlos@gnome-db.org>
+2002-06-01  Carlos Perell Marï¿½ <carlos@gnome-db.org>
 
-	* es.po: Updated by Juan Manuel García Molina <juanma_gm@wanadoo.es>
+	* es.po: Updated by Juan Manuel Garcï¿½ Molina <juanma_gm@wanadoo.es>
 
 2002-06-01  Jesus Bravo Alvarez  <jba@pobox.com>
 
@@ -278,7 +282,7 @@
 
 2002-05-07  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokmål) translation.
+	* no.po: Updated Norwegian (bokmï¿½) translation.
 	
 2002-05-07  Christophe Merlet  <christophe@merlet.net>
 
@@ -310,10 +314,10 @@
 
 	* vi.po: Updated Vietnamese file
 
-2002-05-01  Germán Poo-Caamaño  <gpoo@ubiobio.cl>
+2002-05-01  Germï¿½ Poo-Caamao  <gpoo@ubiobio.cl>
 
 	* es.po: Updated Spanish translation from
-	Juan Manuel García Molina <juanma_gm@wanadoo.es>
+	Juan Manuel Garcï¿½ Molina <juanma_gm@wanadoo.es>
 
 2002-05-01  Mikael Hallendal  <micke@codefactory.se>
 
@@ -332,13 +336,13 @@
 	* vi.po: Added Vietnamese file
 	* wa.po: Updated Walloon file
 
-2002-04-26  Tõivo Leedjärv  <toivo@linux.ee>
+2002-04-26  Tivo Leedjï¿½v  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
 2002-04-23  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokmål) translation.
+	* no.po: Updated Norwegian (bokmï¿½) translation.
 	
 2002-04-22  Takeshi Aihana <aihana@gnome.gr.jp>
 
