Updated German translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-23  Christian Neumair  <chris@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2002-11-12  Laurent Dhima <laurenti@alblinux.net>
 
 	* sq.po: Added Albanian translation.
