Convert all to UTF-8.
2002-11-25  Yanko Kaneti  <yaneti@declera.com>

	* *.po: Convert all to UTF-8.

--- a/po/mk.po
+++ b/po/mk.po
@@ -10,7 +10,7 @@ msgstr ""
 "Last-Translator: atom1c <atom1c@linux.net.mk>\n"
 "Language-Team: Macedonian <C@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-5\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 0.9.5\n"
 
@@ -20,40 +20,40 @@ msgstr "Yelp"
 
 #: src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
-msgstr "Yelp ‰–—‡ÿ⁄–"
+msgstr "Yelp —Ñ–∞–±—Ä–∏–∫–∞"
 
 #: src/yelp-db2html.c:106
 msgid ""
 "Error while parsing the stylesheet, make sure you have your docbook "
 "environment setup correctly."
-msgstr "¡’ ¯–“ÿ ”‡’Ë⁄– ﬂ‡ÿ ﬂ‡ﬁÊ’·ÿ‡–˙’ ›– ‘ﬁ⁄„‹’›‚ﬁ‚."
+msgstr "–°–µ —ò–∞–≤–∏ –≥—Ä–µ—à–∫–∞ –ø—Ä–∏ –ø—Ä–æ—Ü–µ—Å–∏—Ä–∞—ö–µ –Ω–∞ –¥–æ–∫—É–º–µ–Ω—Ç–æ—Ç."
 
 #: src/yelp-db2html.c:122
 #, c-format
 msgid "The document '%s' does not exist"
-msgstr "¥ﬁ⁄„‹’›‚ﬁ‚  '%s' ›’ ﬂﬁ·‚ﬁÿ"
+msgstr "–î–æ–∫—É–º–µ–Ω—Ç–æ—Ç  '%s' –Ω–µ –ø–æ—Å—Ç–æ–∏"
 
 #: src/yelp-db2html.c:137
 #, c-format
 msgid "Couldn't parse the document '%s'."
-msgstr "Ω’‹ﬁ÷–‹ ‘– ”ﬁ ﬂ‡ﬁÊ’·ÿ‡–‹ ‘ﬁ⁄„‹’›‚ﬁ‚ '%s'"
+msgstr "–ù–µ–º–æ–∂–∞–º –¥–∞ –≥–æ –ø—Ä–æ—Ü–µ—Å–∏—Ä–∞–º –¥–æ–∫—É–º–µ–Ω—Ç–æ—Ç '%s'"
 
 #: src/yelp-db2html.c:176
 msgid "Error while applying the stylesheet."
-msgstr "¡’ ¯–“ÿ ”‡’Ë⁄– ﬂ‡ÿ ﬂ‡ÿ‹’›„“–˙’ ›– stylesheet-ﬁ‚"
+msgstr "–°–µ —ò–∞–≤–∏ –≥—Ä–µ—à–∫–∞ –ø—Ä–∏ –ø—Ä–∏–º–µ–Ω—É–≤–∞—ö–µ –Ω–∞ stylesheet-–æ—Ç"
 
 #: src/yelp-html.c:149
 msgid "Loading..."
-msgstr "¡’ “Áÿ‚„“–..."
+msgstr "–°–µ –≤—á–∏—Ç—É–≤–∞..."
 
 #: src/yelp-main.c:109
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "Ω’‹ﬁ÷–‹ ‘– ”ﬁ –⁄‚ÿ“ÿ‡–‹ Yelp: '%s'"
+msgstr "–ù–µ–º–æ–∂–∞–º –¥–∞ –≥–æ –∞–∫—Ç–∏–≤–∏—Ä–∞–º Yelp: '%s'"
 
 #: src/yelp-main.c:128
 msgid "Could not open new window."
-msgstr "Ω’‹ﬁ÷–‹ ‘– ﬁ‚“ﬁ‡–‹ ›ﬁ“ ﬂ‡ﬁ◊ﬁ‡’Ê."
+msgstr "–ù–µ–º–æ–∂–∞–º –¥–∞ –æ—Ç–≤–æ—Ä–∞–º –Ω–æ–≤ –ø—Ä–æ–∑–æ—Ä–µ—Ü."
 
 #: src/yelp-man.c:292 src/yelp-man.c:313 src/yelp-man.c:349 src/yelp-man.c:381
 #: src/yelp-man.c:397 src/yelp-man.c:408
@@ -86,176 +86,175 @@ msgstr "PThreads"
 
 #: src/yelp-man.c:360
 msgid "System Calls"
-msgstr "¡ÿ·‚’‹·⁄ÿ ﬂﬁ“ÿÊÿ"
+msgstr "–°–∏—Å—Ç–µ–º—Å–∫–∏ –ø–æ–≤–∏—Ü–∏"
 
 #: src/yelp-man.c:365
 msgid "Library Functions"
-msgstr "ƒ„›⁄Êÿÿ ﬁ‘ —ÿ—€ÿﬁ‚’⁄ÿ‚’"
+msgstr "–§—É–Ω–∫—Ü–∏–∏ –æ–¥ –±–∏–±–ª–∏–æ—Ç–µ–∫–∏—Ç–µ"
 
 #: src/yelp-man.c:370
 msgid "Kernel Routines"
-msgstr "∫’‡›’€ ‡„‚ÿ›ÿ"
+msgstr "–ö–µ—Ä–Ω–µ–ª —Ä—É—Ç–∏–Ω–∏"
 
 #: src/yelp-man.c:425
 msgid "Applications"
-msgstr "∞ﬂ€ÿ⁄–Êÿÿ"
+msgstr "–ê–ø–ª–∏–∫–∞—Ü–∏–∏"
 
 #: src/yelp-man.c:430
 msgid "Development"
-msgstr "¿–◊“ÿ“–˙’"
+msgstr "–†–∞–∑–≤–∏–≤–∞—ö–µ"
 
 #: src/yelp-man.c:435
 msgid "Hardware Devices"
-msgstr "≈–‡‘“’‡·⁄ÿ „‡’‘ÿ"
+msgstr "–•–∞—Ä–¥–≤–µ—Ä—Å–∫–∏ —É—Ä–µ–¥–∏"
 
 #: src/yelp-man.c:440
 msgid "Configuration Files"
-msgstr "∫ﬁ›‰ÿ”„‡–Êÿ·⁄ÿ ‰–¯€ﬁ“ÿ"
+msgstr "–ö–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—Å–∫–∏ —Ñ–∞—ò–ª–æ–≤–∏"
 
 #: src/yelp-man.c:445
 msgid "Games"
-msgstr "∏”‡ÿ"
+msgstr "–ò–≥—Ä–∏"
 
 #: src/yelp-man.c:450
 msgid "Overviews"
-msgstr "ø‡’”€’‘ÿ"
+msgstr "–ü—Ä–µ–≥–ª–µ–¥–∏"
 
 #: src/yelp-man.c:455
 msgid "System Administration"
-msgstr "¡ÿ·‚’‹ –‘‹ÿ›ÿ·‚‡ÿ‡–˙’"
+msgstr "–°–∏—Å—Ç–µ–º –∞–¥–º–∏–Ω–∏—Å—Ç—Ä–∏—Ä–∞—ö–µ"
 
 #: src/yelp-view-content.c:204 src/yelp-view-index.c:373
 msgid "Section"
-msgstr "æ‘‘’€"
+msgstr "–û–¥–¥–µ–ª"
 
 #: src/yelp-view-index.c:336
 msgid "Search for:"
-msgstr "ø‡’—–‡–¯:"
+msgstr "–ü—Ä–µ–±–∞—Ä–∞—ò:"
 
 #: src/yelp-view-toc.c:328
 msgid "Help Contents"
-msgstr "¡ﬁ‘‡÷ÿ›–"
+msgstr "–°–æ–¥—Ä–∂–∏–Ω–∞"
 
 #: src/yelp-view-toc.c:329
 msgid "GNOME - Desktop"
-msgstr "GNOME - ‘’·⁄‚ﬁﬂ"
+msgstr "GNOME - –¥–µ—Å–∫—Ç–æ–ø"
 
 #: src/yelp-view-toc.c:330
 msgid "Additional documents"
-msgstr "¥ﬁ‘–‚›ÿ ‘ﬁ⁄„‹’›‚ÿ"
+msgstr "–î–æ–¥–∞—Ç–Ω–∏ –¥–æ–∫—É–º–µ–Ω—Ç–∏"
 
 #: src/yelp-view-toc.c:331 src/yelp-view-toc.c:673
 msgid "Manual Pages"
-msgstr "ø‡ÿ‡–Á›ÿÊÿ "
+msgstr "–ü—Ä–∏—Ä–∞—á–Ω–∏—Ü–∏ "
 
 #: src/yelp-view-toc.c:332 src/yelp-view-toc.c:735
 msgid "Info Pages"
-msgstr "∏›‰ﬁ‡‹–Êÿÿ"
+msgstr "–ò–Ω—Ñ–æ—Ä–º–∞—Ü–∏–∏"
 
 #: src/yelp-view-toc.c:530 src/yelp-view-toc.c:736 src/yelp-view-toc.c:878
 msgid "Documents"
-msgstr "¥ﬁ⁄„‹’›‚ÿ"
+msgstr "–î–æ–∫—É–º–µ–Ω—Ç–∏"
 
 #: src/yelp-view-toc.c:531 src/yelp-view-toc.c:674 src/yelp-view-toc.c:879
 msgid "Categories"
-msgstr "∫–‚’”ﬁ‡ÿÿ"
+msgstr "–ö–∞—Ç–µ–≥–æ—Ä–∏–∏"
 
 #: src/yelp-view-toc.c:616
 msgid "Manual pages"
-msgstr "ø‡ÿ‡–Á›ÿÊÿ"
+msgstr "–ü—Ä–∏—Ä–∞—á–Ω–∏—Ü–∏"
 
 #: src/yelp-window.c:151
 msgid "/_File"
-msgstr "/_¥–‚ﬁ‚’⁄–"
+msgstr "/_–î–∞—Ç–æ—Ç–µ–∫–∞"
 
 #: src/yelp-window.c:152
 msgid "/File/_New window"
-msgstr "/¥–‚ﬁ‚’⁄–/_Ωﬁ“ ﬂ‡ﬁ◊ﬁ‡’Ê"
+msgstr "/–î–∞—Ç–æ—Ç–µ–∫–∞/_–ù–æ–≤ –ø—Ä–æ–∑–æ—Ä–µ—Ü"
 
 #: src/yelp-window.c:153
 msgid "/File/_Close window"
-msgstr "/¥–‚ﬁ‚’⁄–/_∑–‚“ﬁ‡ÿ ”ﬁ ﬂ‡ﬁ◊ﬁ‡’Êﬁ‚"
+msgstr "/–î–∞—Ç–æ—Ç–µ–∫–∞/_–ó–∞—Ç–≤–æ—Ä–∏ –≥–æ –ø—Ä–æ–∑–æ—Ä–µ—Ü–æ—Ç"
 
 #. {N_("/File/_Quit"),         NULL,         yw_exit_cb,         0,                           "<StockItem>", GTK_STOCK_QUIT    },
 #: src/yelp-window.c:155
 msgid "/_Go"
-msgstr "/_æ‘ÿ"
+msgstr "/_–û–¥–∏"
 
 #: src/yelp-window.c:156
 msgid "/Go/_Back"
-msgstr "/æ‘ÿ/_Ω–◊–‘"
+msgstr "/–û–¥–∏/_–ù–∞–∑–∞–¥"
 
 #: src/yelp-window.c:157
 msgid "/Go/_Forward"
-msgstr "/æ‘ÿ/_Ω–ﬂ‡’‘"
+msgstr "/–û–¥–∏/_–ù–∞–ø—Ä–µ–¥"
 
 #: src/yelp-window.c:158
 msgid "/Go/_Home"
-msgstr "/æ‘ÿ/_›– ﬂﬁÁ’‚ﬁ⁄"
+msgstr "/–û–¥–∏/_–Ω–∞ –ø–æ—á–µ—Ç–æ–∫"
 
 #: src/yelp-window.c:159
 msgid "/Go/_Index"
-msgstr "/æ‘ÿ/_“ﬁ ÿ›‘’⁄·ﬁ‚"
+msgstr "/–û–¥–∏/_–≤–æ –∏–Ω–¥–µ–∫—Å–æ—Ç"
 
 #: src/yelp-window.c:160
 msgid "/_Help"
-msgstr "/_øﬁ‹ﬁË"
+msgstr "/_–ü–æ–º–æ—à"
 
 #: src/yelp-window.c:161
 msgid "/Help/_About"
-msgstr "/øﬁ‹ﬁË/_∑–"
+msgstr "/–ü–æ–º–æ—à/_–ó–∞"
 
 #: src/yelp-window.c:223
 msgid "Help Browser"
-msgstr "ø‡’€ÿ·‚„“–Á ›– ‘ﬁ⁄„‹’›‚ÿ ◊– ﬂﬁ‹ﬁË"
+msgstr "–ü—Ä–µ–ª–∏—Å—Ç—É–≤–∞—á –Ω–∞ –¥–æ–∫—É–º–µ–Ω—Ç–∏ –∑–∞ –ø–æ–º–æ—à"
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
 #: src/yelp-window.c:567
 msgid "translator_credits"
-msgstr "◊–·€„”ÿ_›– ﬂ‡’“’‘„“–Áÿ‚’"
+msgstr "–∑–∞—Å–ª—É–≥–∏_–Ω–∞ –ø—Ä–µ–≤–µ–¥—É–≤–∞—á–∏—Ç–µ"
 
 #: src/yelp-window.c:571
 msgid "Help Browser for GNOME 2.0"
-msgstr "ø‡’€ÿ·‚„“–Á ›– ‘ﬁ⁄„‹’›‚ÿ ◊– ﬂﬁ‹ﬁË ◊– GNOME 2.0"
+msgstr "–ü—Ä–µ–ª–∏—Å—Ç—É–≤–∞—á –Ω–∞ –¥–æ–∫—É–º–µ–Ω—Ç–∏ –∑–∞ –ø–æ–º–æ—à –∑–∞ GNOME 2.0"
 
 #: src/yelp-window.c:625
 msgid "Back"
-msgstr "Ω–◊–‘"
+msgstr "–ù–∞–∑–∞–¥"
 
 #: src/yelp-window.c:626
 msgid "Show previous page in history"
-msgstr "ø‡ÿ⁄–÷ÿ ¯– ﬂ‡’‚Âﬁ‘›–‚– ·‚‡–›– ﬁ‘ ‹ÿ›–‚ÿ‚’ ‘ﬁ⁄„‹’›‚ÿ"
+msgstr "–ü—Ä–∏–∫–∞–∂–∏ —ò–∞ –ø—Ä–µ—Ç—Ö–æ–¥–Ω–∞—Ç–∞ —Å—Ç—Ä–∞–Ω–∞ –æ–¥ –º–∏–Ω–∞—Ç–∏—Ç–µ –¥–æ–∫—É–º–µ–Ω—Ç–∏"
 
 #: src/yelp-window.c:637
 msgid "Forward"
-msgstr "Ω–ﬂ‡’‘"
+msgstr "–ù–∞–ø—Ä–µ–¥"
 
 #: src/yelp-window.c:638
 msgid "Show next page in history"
-msgstr "øﬁ⁄–÷ÿ ¯– ·€’‘›–‚– ·‚‡–›– ﬁ‘ ‹ÿ›–‚ÿ‚’ ‘ﬁ⁄„‹’›‚ÿ"
+msgstr "–ü–æ–∫–∞–∂–∏ —ò–∞ —Å–ª–µ–¥–Ω–∞—Ç–∞ —Å—Ç—Ä–∞–Ω–∞ –æ–¥ –º–∏–Ω–∞—Ç–∏—Ç–µ –¥–æ–∫—É–º–µ–Ω—Ç–∏"
 
 #: src/yelp-window.c:651
 msgid "Home"
-msgstr "Ω– ﬂﬁÁ’‚ﬁ⁄"
+msgstr "–ù–∞ –ø–æ—á–µ—Ç–æ–∫"
 
 #: src/yelp-window.c:652
 msgid "Go to home view"
-msgstr "≤‡–‚ÿ ·’ ›– ﬂﬁÁ’‚ﬁ⁄ﬁ‚"
+msgstr "–í—Ä–∞—Ç–∏ —Å–µ –Ω–∞ –ø–æ—á–µ—Ç–æ–∫–æ—Ç"
 
 #: src/yelp-window.c:662
 msgid "Index"
-msgstr "∏›‘’⁄·"
+msgstr "–ò–Ω–¥–µ–∫—Å"
 
 #: src/yelp-window.c:663
 msgid "Search in the index"
-msgstr "ø‡’—–‡–¯ “ﬁ ÿ›‘’⁄·ﬁ‚"
+msgstr "–ü—Ä–µ–±–∞—Ä–∞—ò –≤–æ –∏–Ω–¥–µ–∫—Å–æ—Ç"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "øﬁ—–‡–¯ ﬂﬁ‹ﬁË ·ﬁ GNOME"
+msgstr "–ü–æ–±–∞—Ä–∞—ò –ø–æ–º–æ—à —Å–æ GNOME"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
-msgstr "øﬁ‹ﬁË "
-
+msgstr "–ü–æ–º–æ—à "
