--- a/po/tr.po
+++ b/po/tr.po
@@ -1,16 +1,16 @@
 # Turkish translation of yelp.
 # Copyright (C) 2002 Free Software Foundation, Inc.
-# Görkem Çetin <gorkem@gelecek.com.tr>, 2002.
+# GÃ¶rkem Ã‡etin <gorkem@gelecek.com.tr>, 2002.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 0.2.99\n"
 "POT-Creation-Date: 2002-03-04 02:05+0100\n"
 "PO-Revision-Date: 2002-01-06 07:52-0500\n"
-"Last-Translator: Görkem Çetin <gorkem@gelecek.com.tr>\n"
+"Last-Translator: GÃ¶rkem Ã‡etin <gorkem@gelecek.com.tr>\n"
 "Language-Team: Turkish <gnome-turk@gnome.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-9\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: src/GNOME_Yelp.server.in.h:1
@@ -28,11 +28,11 @@ msgstr "bilgi"
 #: src/yelp-main.c:91
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "Yelp başlatılamadı: '%s'"
+msgstr "Yelp baÅŸlatÄ±lamadÄ±: '%s'"
 
 #: src/yelp-main.c:110
 msgid "Could not open new window."
-msgstr "Yeni pencere açılamadı."
+msgstr "Yeni pencere aÃ§Ä±lamadÄ±."
 
 #: src/yelp-man.c:301 src/yelp-man.c:322 src/yelp-man.c:358 src/yelp-man.c:390
 #: src/yelp-man.c:406 src/yelp-man.c:417
@@ -65,15 +65,15 @@ msgstr "PThreads"
 
 #: src/yelp-man.c:369
 msgid "System Calls"
-msgstr "Sistem Çağrıları"
+msgstr "Sistem Ã‡aÄŸrÄ±larÄ±"
 
 #: src/yelp-man.c:374
 msgid "Library Functions"
-msgstr "Kütüphane Fonksiyonları"
+msgstr "KÃ¼tÃ¼phane FonksiyonlarÄ±"
 
 #: src/yelp-man.c:379
 msgid "Kernel Routines"
-msgstr "Çekirdek Yordamları"
+msgstr "Ã‡ekirdek YordamlarÄ±"
 
 #: src/yelp-man.c:434
 msgid "Applications"
@@ -81,15 +81,15 @@ msgstr "Uygulamalar"
 
 #: src/yelp-man.c:439
 msgid "Development"
-msgstr "Geliştirme"
+msgstr "GeliÅŸtirme"
 
 #: src/yelp-man.c:444
 msgid "Hardware Devices"
-msgstr "Donanım Aygıtları"
+msgstr "DonanÄ±m AygÄ±tlarÄ±"
 
 #: src/yelp-man.c:449
 msgid "Configuration Files"
-msgstr "Yapılandırma Dosyaları"
+msgstr "YapÄ±landÄ±rma DosyalarÄ±"
 
 #: src/yelp-man.c:454
 msgid "Games"
@@ -97,19 +97,19 @@ msgstr "Oyunlar"
 
 #: src/yelp-man.c:459
 msgid "Overviews"
-msgstr "İzlenimler"
+msgstr "Ä°zlenimler"
 
 #: src/yelp-man.c:464
 msgid "System Administration"
-msgstr "Sistem Yönetimi"
+msgstr "Sistem YÃ¶netimi"
 
 #: src/yelp-man.c:475
 msgid "man"
-msgstr "kılavuz"
+msgstr "kÄ±lavuz"
 
 #: src/yelp-view-content.c:197 src/yelp-view-index.c:355
 msgid "Section"
-msgstr "Bölüm"
+msgstr "BÃ¶lÃ¼m"
 
 #: src/yelp-view-index.c:325
 msgid "Search for:"
@@ -117,15 +117,15 @@ msgstr "Ara:"
 
 #: src/yelp-view-toc.c:271
 msgid "Other Documents"
-msgstr "Diğer Belgeler"
+msgstr "DiÄŸer Belgeler"
 
 #: src/yelp-view-toc.c:272 src/yelp-view-toc.c:502
 msgid "Manual pages"
-msgstr "Kılavuz sayfaları"
+msgstr "KÄ±lavuz sayfalarÄ±"
 
 #: src/yelp-view-toc.c:273 src/yelp-view-toc.c:579 src/yelp-view-toc.c:598
 msgid "Info pages"
-msgstr "Bilgi sayfaları"
+msgstr "Bilgi sayfalarÄ±"
 
 #: src/yelp-view-toc.c:274
 msgid "Installed documents"
@@ -133,15 +133,15 @@ msgstr "Kurulu belgeler"
 
 #: src/yelp-view-toc.c:288
 msgid "Start page"
-msgstr "Başlangıç sayfası"
+msgstr "BaÅŸlangÄ±Ã§ sayfasÄ±"
 
 #: src/yelp-view-toc.c:532
 msgid "Manual Pages"
-msgstr "Kılavuz Sayfaları"
+msgstr "KÄ±lavuz SayfalarÄ±"
 
 #: src/yelp-view-toc.c:700
 msgid "Scrollkeeper docs for category"
-msgstr "Kategorilerine göre Scrollkeeper belgeleri"
+msgstr "Kategorilerine gÃ¶re Scrollkeeper belgeleri"
 
 #: src/yelp-window.c:138
 msgid "/_File"
@@ -157,7 +157,7 @@ msgstr "/Dosya/_Pencereyi kapat"
 
 #: src/yelp-window.c:141
 msgid "/File/_Quit"
-msgstr "/Dosya/Çı_k"
+msgstr "/Dosya/Ã‡Ä±_k"
 
 #: src/yelp-window.c:142
 msgid "/_Go"
@@ -169,37 +169,37 @@ msgstr "/Git/_Geri"
 
 #: src/yelp-window.c:144
 msgid "/Go/_Forward"
-msgstr "/Git/İ_leri"
+msgstr "/Git/Ä°_leri"
 
 #: src/yelp-window.c:145
 msgid "/Go/_Home"
-msgstr "/Git/_Başlangıç"
+msgstr "/Git/_BaÅŸlangÄ±Ã§"
 
 #: src/yelp-window.c:146
 msgid "/Go/_Index"
-msgstr "/Git/İ_ndeks"
+msgstr "/Git/Ä°_ndeks"
 
 #: src/yelp-window.c:147
 msgid "/_Help"
-msgstr "/_Yardım"
+msgstr "/_YardÄ±m"
 
 #: src/yelp-window.c:148
 msgid "/Help/_About"
-msgstr "/Yardım/_Hakkında"
+msgstr "/YardÄ±m/_HakkÄ±nda"
 
 #: src/yelp-window.c:207
 msgid "Help Browser"
-msgstr "Yardım Tarayıcısı"
+msgstr "YardÄ±m TarayÄ±cÄ±sÄ±"
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
 #: src/yelp-window.c:539
 msgid "translator_credits"
-msgstr "Görkem Çetin"
+msgstr "GÃ¶rkem Ã‡etin"
 
 #: src/yelp-window.c:543
 msgid "Help Browser for GNOME 2.0"
-msgstr "GNOME 2.0 için yardım tarayıcısı"
+msgstr "GNOME 2.0 iÃ§in yardÄ±m tarayÄ±cÄ±sÄ±"
 
 #: src/yelp-window.c:570
 msgid "Back"
@@ -207,60 +207,60 @@ msgstr "Geri"
 
 #: src/yelp-window.c:571
 msgid "Show previous page in history"
-msgstr "Günlükte bulunan önceki sayfayı göster"
+msgstr "GÃ¼nlÃ¼kte bulunan Ã¶nceki sayfayÄ± gÃ¶ster"
 
 #: src/yelp-window.c:582
 msgid "Forward"
-msgstr "İleri"
+msgstr "Ä°leri"
 
 #: src/yelp-window.c:583
 msgid "Show next page in history"
-msgstr "Günlükte bulunan sonraki sayfayı göster"
+msgstr "GÃ¼nlÃ¼kte bulunan sonraki sayfayÄ± gÃ¶ster"
 
 #: src/yelp-window.c:596
 msgid "Home"
-msgstr "Başlangıç"
+msgstr "BaÅŸlangÄ±Ã§"
 
 #: src/yelp-window.c:597
 msgid "Go to home view"
-msgstr "Başlangıç görünümüne git"
+msgstr "BaÅŸlangÄ±Ã§ gÃ¶rÃ¼nÃ¼mÃ¼ne git"
 
 #: src/yelp-window.c:607
 msgid "Index"
-msgstr "İndeks"
+msgstr "Ä°ndeks"
 
 #: src/yelp-window.c:608
 msgid "Search in the index"
-msgstr "İndiste tara"
+msgstr "Ä°ndiste tara"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "GNOME hakkında yardım"
+msgstr "GNOME hakkÄ±nda yardÄ±m"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
-msgstr "Yardım"
+msgstr "YardÄ±m"
 
 #~ msgid "<a href=\"toc:man\">Manual pages</a>: "
-#~ msgstr "<a href=\"toc:man\">Kılavuz sayfaları</a>: "
+#~ msgstr "<a href=\"toc:man\">KÄ±lavuz sayfalarÄ±</a>: "
 
 #~ msgid "Manual page sections"
-#~ msgstr "Kılavuz sayfa bölümleri"
+#~ msgstr "KÄ±lavuz sayfa bÃ¶lÃ¼mleri"
 
 #~ msgid "Go back in the history list"
-#~ msgstr "Geçmiş listesinde geri git"
+#~ msgstr "GeÃ§miÅŸ listesinde geri git"
 
 #~ msgid "Go forth in the history list"
-#~ msgstr "Geçmiş listesinde ileri git"
+#~ msgstr "GeÃ§miÅŸ listesinde ileri git"
 
 #~ msgid "Overview of contents"
-#~ msgstr "İçindekiler"
+#~ msgstr "Ä°Ã§indekiler"
 
 #~ msgid "Search for a phrase in the document"
 #~ msgstr "Belgede arama yap"
 
 #~ msgid "Help on "
-#~ msgstr "Yardım: "
+#~ msgstr "YardÄ±m: "
 
 #~ msgid "Enter phrase to search for in all documents"
-#~ msgstr "Tüm belgelerde arama yapmak için bir sözcük girin"
+#~ msgstr "TÃ¼m belgelerde arama yapmak iÃ§in bir sÃ¶zcÃ¼k girin"
