--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-25  Yanko Kaneti  <yaneti@declera.com>
+
+	* *.po: Convert all to UTF-8.
+	
 2002-11-05  Laurent Dhima  <laurenti@alblinux.net>
 
 	* sq.po: Added Albanian translation
