--- a/po/el.po
+++ b/po/el.po
@@ -10,7 +10,7 @@ msgstr ""
 "Last-Translator: Simos Xenitellis <simos@hellug.gr>\n"
 "Language-Team: Greek <nls@tux.hellug.gr>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-7\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #
@@ -20,7 +20,7 @@ msgstr "Yelp"
 
 #: src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
-msgstr "Εργοστάσιο Yelp"
+msgstr "Ξ•ΟΞ³ΞΏΟƒΟ„Ξ¬ΟƒΞΉΞΏ Yelp"
 
 #: src/yelp-info.c:99
 msgid "info"
@@ -29,11 +29,11 @@ msgstr "info"
 #: src/yelp-main.c:91
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "Αδύνατη η ενεργοποίηση του Yelp: '%s'"
+msgstr "Ξ‘Ξ΄ΟΞ½Ξ±Ο„Ξ· Ξ· ΞµΞ½ΞµΟΞ³ΞΏΟ€ΞΏΞ―Ξ·ΟƒΞ· Ο„ΞΏΟ… Yelp: '%s'"
 
 #: src/yelp-main.c:110
 msgid "Could not open new window."
-msgstr "Αδύνατο το άνοιγμα νέου παραθύρου."
+msgstr "Ξ‘Ξ΄ΟΞ½Ξ±Ο„ΞΏ Ο„ΞΏ Ξ¬Ξ½ΞΏΞΉΞ³ΞΌΞ± Ξ½Ξ­ΞΏΟ… Ο€Ξ±ΟΞ±ΞΈΟΟΞΏΟ…."
 
 #: src/yelp-man.c:271 src/yelp-man.c:292 src/yelp-man.c:328 src/yelp-man.c:360
 #: src/yelp-man.c:376 src/yelp-man.c:387
@@ -67,43 +67,43 @@ msgstr "PThreads"
 
 #: src/yelp-man.c:339
 msgid "System Calls"
-msgstr "Κλήσεις Συστήματος"
+msgstr "ΞΞ»Ξ®ΟƒΞµΞΉΟ‚ Ξ£Ο…ΟƒΟ„Ξ®ΞΌΞ±Ο„ΞΏΟ‚"
 
 #: src/yelp-man.c:344
 msgid "Library Functions"
-msgstr "Συναρτήσεις Βιβλιοθήκων"
+msgstr "Ξ£Ο…Ξ½Ξ±ΟΟ„Ξ®ΟƒΞµΞΉΟ‚ Ξ’ΞΉΞ²Ξ»ΞΉΞΏΞΈΞ®ΞΊΟ‰Ξ½"
 
 #: src/yelp-man.c:349
 msgid "Kernel Routines"
-msgstr "Ρουτίνες Πυρήνα"
+msgstr "Ξ΅ΞΏΟ…Ο„Ξ―Ξ½ΞµΟ‚ Ξ Ο…ΟΞ®Ξ½Ξ±"
 
 #: src/yelp-man.c:404
 msgid "Applications"
-msgstr "Εφαρμογές"
+msgstr "Ξ•Ο†Ξ±ΟΞΌΞΏΞ³Ξ­Ο‚"
 
 #: src/yelp-man.c:409
 msgid "Development"
-msgstr "Ανάπτυξη Εφαρμογών"
+msgstr "Ξ‘Ξ½Ξ¬Ο€Ο„Ο…ΞΎΞ· Ξ•Ο†Ξ±ΟΞΌΞΏΞ³ΟΞ½"
 
 #: src/yelp-man.c:414
 msgid "Hardware Devices"
-msgstr "Συσκευές Υλικού"
+msgstr "Ξ£Ο…ΟƒΞΊΞµΟ…Ξ­Ο‚ Ξ¥Ξ»ΞΉΞΊΞΏΟ"
 
 #: src/yelp-man.c:419
 msgid "Configuration Files"
-msgstr "Αρχεία Ρυθμίσεων"
+msgstr "Ξ‘ΟΟ‡ΞµΞ―Ξ± Ξ΅Ο…ΞΈΞΌΞ―ΟƒΞµΟ‰Ξ½"
 
 #: src/yelp-man.c:424
 msgid "Games"
-msgstr "Παιχνίδια"
+msgstr "Ξ Ξ±ΞΉΟ‡Ξ½Ξ―Ξ΄ΞΉΞ±"
 
 #: src/yelp-man.c:429
 msgid "Overviews"
-msgstr "Γενικές Επισκοπήσεις"
+msgstr "Ξ“ΞµΞ½ΞΉΞΊΞ­Ο‚ Ξ•Ο€ΞΉΟƒΞΊΞΏΟ€Ξ®ΟƒΞµΞΉΟ‚"
 
 #: src/yelp-man.c:434
 msgid "System Administration"
-msgstr "Διαχείριση Συστήματος"
+msgstr "Ξ”ΞΉΞ±Ο‡ΞµΞ―ΟΞΉΟƒΞ· Ξ£Ο…ΟƒΟ„Ξ®ΞΌΞ±Ο„ΞΏΟ‚"
 
 #: src/yelp-man.c:445
 msgid "man"
@@ -112,159 +112,159 @@ msgstr "man"
 #
 #: src/yelp-view-content.c:209 src/yelp-view-index.c:229
 msgid "Section"
-msgstr "Ενότητα"
+msgstr "Ξ•Ξ½ΟΟ„Ξ·Ο„Ξ±"
 
 #: src/yelp-view-index.c:211
 msgid "Search for:"
-msgstr "Αναζήτηση για:"
+msgstr "Ξ‘Ξ½Ξ±Ξ¶Ξ®Ο„Ξ·ΟƒΞ· Ξ³ΞΉΞ±:"
 
 #
 #: src/yelp-view-toc.c:271
 msgid "Other Documents"
-msgstr "¶λλα Έγγραφα"
+msgstr "Ξ†Ξ»Ξ»Ξ± ΞΞ³Ξ³ΟΞ±Ο†Ξ±"
 
 #: src/yelp-view-toc.c:272 src/yelp-view-toc.c:481
 msgid "Manual pages"
-msgstr "Σελίδες τεκμηρίωσης"
+msgstr "Ξ£ΞµΞ»Ξ―Ξ΄ΞµΟ‚ Ο„ΞµΞΊΞΌΞ·ΟΞ―Ο‰ΟƒΞ·Ο‚"
 
 #: src/yelp-view-toc.c:273 src/yelp-view-toc.c:558 src/yelp-view-toc.c:577
 msgid "Info pages"
-msgstr "Σελίδες info"
+msgstr "Ξ£ΞµΞ»Ξ―Ξ΄ΞµΟ‚ info"
 
 #: src/yelp-view-toc.c:274
 msgid "Installed documents"
-msgstr "Εγκατεστημένα έγγραφα"
+msgstr "Ξ•Ξ³ΞΊΞ±Ο„ΞµΟƒΟ„Ξ·ΞΌΞ­Ξ½Ξ± Ξ­Ξ³Ξ³ΟΞ±Ο†Ξ±"
 
 #: src/yelp-view-toc.c:286
 msgid "Start page"
-msgstr "Αρχική σελίδα"
+msgstr "Ξ‘ΟΟ‡ΞΉΞΊΞ® ΟƒΞµΞ»Ξ―Ξ΄Ξ±"
 
 #: src/yelp-view-toc.c:511
 msgid "Manual Pages"
-msgstr "Σελίδες Τεκμηρίωσης"
+msgstr "Ξ£ΞµΞ»Ξ―Ξ΄ΞµΟ‚ Ξ¤ΞµΞΊΞΌΞ·ΟΞ―Ο‰ΟƒΞ·Ο‚"
 
 #: src/yelp-view-toc.c:679
 msgid "Scrollkeeper docs for category"
-msgstr "Έγγραφα scrollkeeper για κατηγορία"
+msgstr "ΞΞ³Ξ³ΟΞ±Ο†Ξ± scrollkeeper Ξ³ΞΉΞ± ΞΊΞ±Ο„Ξ·Ξ³ΞΏΟΞ―Ξ±"
 
 #: src/yelp-window.c:138
 msgid "/_File"
-msgstr "/_Αρχείο"
+msgstr "/_Ξ‘ΟΟ‡ΞµΞ―ΞΏ"
 
 #: src/yelp-window.c:139
 msgid "/File/_New window"
-msgstr "/Αρχείο/_Νέο παράθυρο"
+msgstr "/Ξ‘ΟΟ‡ΞµΞ―ΞΏ/_ΞΞ­ΞΏ Ο€Ξ±ΟΞ¬ΞΈΟ…ΟΞΏ"
 
 #: src/yelp-window.c:140
 msgid "/File/_Close window"
-msgstr "/Αρχείο/Κ_λείσιμο παραθύρου"
+msgstr "/Ξ‘ΟΟ‡ΞµΞ―ΞΏ/Ξ_Ξ»ΞµΞ―ΟƒΞΉΞΌΞΏ Ο€Ξ±ΟΞ±ΞΈΟΟΞΏΟ…"
 
 #: src/yelp-window.c:141
 msgid "/File/_Quit"
-msgstr "/Αρχείο/Έ_ξοδος"
+msgstr "/Ξ‘ΟΟ‡ΞµΞ―ΞΏ/Ξ_ΞΎΞΏΞ΄ΞΏΟ‚"
 
 #: src/yelp-window.c:142
 msgid "/_Go"
-msgstr "/_Πήγαινε"
+msgstr "/_Ξ Ξ®Ξ³Ξ±ΞΉΞ½Ξµ"
 
 #: src/yelp-window.c:143
 msgid "/Go/_Back"
-msgstr "/Πήγαινε/_Πίσω"
+msgstr "/Ξ Ξ®Ξ³Ξ±ΞΉΞ½Ξµ/_Ξ Ξ―ΟƒΟ‰"
 
 #: src/yelp-window.c:144
 msgid "/Go/_Forward"
-msgstr "/Πήγαινε/_Μπροστά"
+msgstr "/Ξ Ξ®Ξ³Ξ±ΞΉΞ½Ξµ/_ΞΟ€ΟΞΏΟƒΟ„Ξ¬"
 
 #: src/yelp-window.c:145
 msgid "/Go/_Home"
-msgstr "/Πήγαινε/_Αρχή"
+msgstr "/Ξ Ξ®Ξ³Ξ±ΞΉΞ½Ξµ/_Ξ‘ΟΟ‡Ξ®"
 
 #: src/yelp-window.c:146
 msgid "/Go/_Index"
-msgstr "/Πήγαινε/_Περι"
+msgstr "/Ξ Ξ®Ξ³Ξ±ΞΉΞ½Ξµ/_Ξ ΞµΟΞΉ"
 
 #: src/yelp-window.c:147
 msgid "/_Help"
-msgstr "/_Βοήθεια"
+msgstr "/_Ξ’ΞΏΞ®ΞΈΞµΞΉΞ±"
 
 #: src/yelp-window.c:148
 msgid "/Help/_About"
-msgstr "/Βοήθεια/_Περί"
+msgstr "/Ξ’ΞΏΞ®ΞΈΞµΞΉΞ±/_Ξ ΞµΟΞ―"
 
 #: src/yelp-window.c:207
 msgid "Help Browser"
-msgstr "Πρόγραμμα Βοήθειας"
+msgstr "Ξ ΟΟΞ³ΟΞ±ΞΌΞΌΞ± Ξ’ΞΏΞ®ΞΈΞµΞΉΞ±Ο‚"
 
 #: src/yelp-window.c:529
 msgid "translator_credits"
-msgstr "Συμεών (σίμος) Ξενιτέλλης <simos@hellug.gr>"
+msgstr "Ξ£Ο…ΞΌΞµΟΞ½ (ΟƒΞ―ΞΌΞΏΟ‚) ΞΞµΞ½ΞΉΟ„Ξ­Ξ»Ξ»Ξ·Ο‚ <simos@hellug.gr>"
 
 #: src/yelp-window.c:533
 msgid "Help Browser for GNOME 2.0"
-msgstr "Πρόγραμμα Περιήγησης Βοήθειας για το GNOME 2.0"
+msgstr "Ξ ΟΟΞ³ΟΞ±ΞΌΞΌΞ± Ξ ΞµΟΞΉΞ®Ξ³Ξ·ΟƒΞ·Ο‚ Ξ’ΞΏΞ®ΞΈΞµΞΉΞ±Ο‚ Ξ³ΞΉΞ± Ο„ΞΏ GNOME 2.0"
 
 #: src/yelp-window.c:560
 msgid "Back"
-msgstr "Πίσω"
+msgstr "Ξ Ξ―ΟƒΟ‰"
 
 #: src/yelp-window.c:561
 msgid "Show previous page in history"
-msgstr "Εμφάνιση προηγούμενης σελίδας του ιστορικού"
+msgstr "Ξ•ΞΌΟ†Ξ¬Ξ½ΞΉΟƒΞ· Ο€ΟΞΏΞ·Ξ³ΞΏΟΞΌΞµΞ½Ξ·Ο‚ ΟƒΞµΞ»Ξ―Ξ΄Ξ±Ο‚ Ο„ΞΏΟ… ΞΉΟƒΟ„ΞΏΟΞΉΞΊΞΏΟ"
 
 #: src/yelp-window.c:572
 msgid "Forward"
-msgstr "Μπροστά"
+msgstr "ΞΟ€ΟΞΏΟƒΟ„Ξ¬"
 
 #: src/yelp-window.c:573
 msgid "Show next page in history"
-msgstr "Εμφάνιση επόμενης σελίδες του ιστορικού"
+msgstr "Ξ•ΞΌΟ†Ξ¬Ξ½ΞΉΟƒΞ· ΞµΟ€ΟΞΌΞµΞ½Ξ·Ο‚ ΟƒΞµΞ»Ξ―Ξ΄ΞµΟ‚ Ο„ΞΏΟ… ΞΉΟƒΟ„ΞΏΟΞΉΞΊΞΏΟ"
 
 #: src/yelp-window.c:586
 msgid "Home"
-msgstr "Αρχή"
+msgstr "Ξ‘ΟΟ‡Ξ®"
 
 #: src/yelp-window.c:587
 msgid "Go to home view"
-msgstr "Πήγαινε στην προβολή περιεχομένων"
+msgstr "Ξ Ξ®Ξ³Ξ±ΞΉΞ½Ξµ ΟƒΟ„Ξ·Ξ½ Ο€ΟΞΏΞ²ΞΏΞ»Ξ® Ο€ΞµΟΞΉΞµΟ‡ΞΏΞΌΞ­Ξ½Ο‰Ξ½"
 
 #: src/yelp-window.c:597
 msgid "Index"
-msgstr "Περιεχόμενα"
+msgstr "Ξ ΞµΟΞΉΞµΟ‡ΟΞΌΞµΞ½Ξ±"
 
 #: src/yelp-window.c:598
 msgid "Search in the index"
-msgstr "Αναζήτηση στο κατάλογο"
+msgstr "Ξ‘Ξ½Ξ±Ξ¶Ξ®Ο„Ξ·ΟƒΞ· ΟƒΟ„ΞΏ ΞΊΞ±Ο„Ξ¬Ξ»ΞΏΞ³ΞΏ"
 
 #: src/yelp-window.c:608
 msgid "Search for a phrase in the document"
-msgstr "Αναζήτηση φράσης στο έγγραφο"
+msgstr "Ξ‘Ξ½Ξ±Ξ¶Ξ®Ο„Ξ·ΟƒΞ· Ο†ΟΞ¬ΟƒΞ·Ο‚ ΟƒΟ„ΞΏ Ξ­Ξ³Ξ³ΟΞ±Ο†ΞΏ"
 
 #: src/yelp-window.c:614
 msgid "Help on "
-msgstr "Βοήθεια πάνω σε "
+msgstr "Ξ’ΞΏΞ®ΞΈΞµΞΉΞ± Ο€Ξ¬Ξ½Ο‰ ΟƒΞµ "
 
 #: src/yelp-window.c:619
 msgid "Enter phrase to search for in all documents"
-msgstr "Εισαγωγή φράσης για αναζήτηση σε όλα τα έγγραφα"
+msgstr "Ξ•ΞΉΟƒΞ±Ξ³Ο‰Ξ³Ξ® Ο†ΟΞ¬ΟƒΞ·Ο‚ Ξ³ΞΉΞ± Ξ±Ξ½Ξ±Ξ¶Ξ®Ο„Ξ·ΟƒΞ· ΟƒΞµ ΟΞ»Ξ± Ο„Ξ± Ξ­Ξ³Ξ³ΟΞ±Ο†Ξ±"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "Λήψη βοήθειας για το GNOME"
+msgstr "Ξ›Ξ®ΟΞ· Ξ²ΞΏΞ®ΞΈΞµΞΉΞ±Ο‚ Ξ³ΞΉΞ± Ο„ΞΏ GNOME"
 
 #
 #: yelp.desktop.in.h:2
 msgid "Help"
-msgstr "Βοήθεια"
+msgstr "Ξ’ΞΏΞ®ΞΈΞµΞΉΞ±"
 
 #~ msgid "Manual page sections"
-#~ msgstr "Ενότητες σελίδων τεκμηρίωσης"
+#~ msgstr "Ξ•Ξ½ΟΟ„Ξ·Ο„ΞµΟ‚ ΟƒΞµΞ»Ξ―Ξ΄Ο‰Ξ½ Ο„ΞµΞΊΞΌΞ·ΟΞ―Ο‰ΟƒΞ·Ο‚"
 
 #~ msgid "Go back in the history list"
-#~ msgstr "Πήγαινε πίσω στη λίστα ιστορικού"
+#~ msgstr "Ξ Ξ®Ξ³Ξ±ΞΉΞ½Ξµ Ο€Ξ―ΟƒΟ‰ ΟƒΟ„Ξ· Ξ»Ξ―ΟƒΟ„Ξ± ΞΉΟƒΟ„ΞΏΟΞΉΞΊΞΏΟ"
 
 #~ msgid "Go forth in the history list"
-#~ msgstr "Πήγαινε μπροστά στη λίστα ιστορικού"
+#~ msgstr "Ξ Ξ®Ξ³Ξ±ΞΉΞ½Ξµ ΞΌΟ€ΟΞΏΟƒΟ„Ξ¬ ΟƒΟ„Ξ· Ξ»Ξ―ΟƒΟ„Ξ± ΞΉΟƒΟ„ΞΏΟΞΉΞΊΞΏΟ"
 
 #
 #~ msgid "Overview of contents"
-#~ msgstr "Επισκόπηση περιεχομένων"
+#~ msgstr "Ξ•Ο€ΞΉΟƒΞΊΟΟ€Ξ·ΟƒΞ· Ο€ΞµΟΞΉΞµΟ‡ΞΏΞΌΞ­Ξ½Ο‰Ξ½"
