--- a/po/it.po
+++ b/po/it.po
@@ -10,7 +10,7 @@ msgstr ""
 "Last-Translator: Psyk[o] <shaihulud@supereva.it>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=iso-8859-1\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: src/GNOME_Yelp.server.in.h:1
@@ -26,7 +26,7 @@ msgid ""
 "Error while parsing the stylesheet, make sure you have your docbook "
 "environment setup correctly."
 msgstr ""
-"Si è verificato un errore nell'analisi del foglio di stile, assicurarsi che "
+"Si Ã¨ verificato un errore nell'analisi del foglio di stile, assicurarsi che "
 "l'ambiente del docbook sia impostato correttamente."
 
 #: src/yelp-db2html.c:122
@@ -41,7 +41,7 @@ msgstr "Impossibile analizzare il documento \"%s\"."
 
 #: src/yelp-db2html.c:176
 msgid "Error while applying the stylesheet."
-msgstr "Si è verificato un errore nell'applicare il foglio di stile."
+msgstr "Si Ã¨ verificato un errore nell'applicare il foglio di stile."
 
 #: src/yelp-html.c:155
 msgid "Loading..."
@@ -267,4 +267,3 @@ msgstr "Ricevi aiuto con GNOME"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Aiuto"
-
