--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-25  Ole Laursen  <olau@hardworking.dk>
+
+	* da.po: Updated Danaish translation.
+
 2002-11-25  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Updated Norwegian (bokmål) translation.
