--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-28  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Updated Catalan translation.
+
 2002-11-25 Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>
 
 	* nl.po: Massive copy-paste from stable branch.
