--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-29  Evandro Fernandes Giovanini <evandrofg@ig.com.br>
+
+	* pt_BR: Updated Brazilian Portuguese translation.
+
 2002-11-28  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation.
