--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-21  Andras Timar  <timar@gnome.hu>
+
+	* hu.po: Updated Hungarian translation.
+
 2002-11-29  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
