Wrong credits in the NEWS-file

--- a/NEWS
+++ b/NEWS
@@ -8,7 +8,7 @@ Changes in 2.1.2:
 Changes in 2.1.1:
 -----------------
 
-* i18n fixes to stylesheets                     (Paolo Maggi)
+* i18n fixes to stylesheets                     (Marius Andreiana)
 * Use GnomeApp instead of GtkWindow             (Paolo Maggi)
 * Fix crash when loading external files         (Mikael Hallendal,
                                                  Paolo Maggi)
