Fixed Ukrainian translations

--- a/po/uk.po
+++ b/po/uk.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "POT-Creation-Date: 2002-12-09 14:45+0200\n"
-"PO-Revision-Date: 2002-12-09 03:53--500\n"
+"PO-Revision-Date: 2002-12-09 04:09--500\n"
 "Last-Translator: Yuriy Syrota <yuri@renome.rovno.ua>\n"
 "Language-Team: Ukrainian <uk@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -100,7 +100,7 @@ msgstr "Ігри"
 
 #: src/yelp-man.c:454
 msgid "Overviews"
-msgstr "Огляд"
+msgstr "Огляди"
 
 #: src/yelp-man.c:459
 msgid "System Administration"
