--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-12-10  Yanko Kaneti  <yaneti@declera.com>
+
+	* bg.po: Updated Bulgarian translation by Alexander Shopov.
+
 2002-12-07  He Qiangqiang  <carton@linux.net.cn>
 
 	* zh_CN.po: sync with gnome-2-0 branch.
