Updating Amharic translation.

--- a/po/am.po
+++ b/po/am.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp 1.0\n"
 "POT-Creation-Date: 2002-10-03 05:37+0200\n"
-"PO-Revision-Date: 2002-10-29 09:27+EDT\n"
+"PO-Revision-Date: 2002-12-10 19:37+EDT\n"
 "Last-Translator: Ge'ez Frontier Foundation <locales@geez.org>\n"
 "Language-Team: Amharic <locales@geez.org>\n"
 "MIME-Version: 1.0\n"
@@ -21,7 +21,7 @@ msgstr "የልፕ"
 
 #: src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
-msgstr "የልፕ አምራች"
+msgstr "የልፕ ፋብሪካ"
 
 #: src/yelp-main.c:114
 #, c-format
@@ -116,7 +116,7 @@ msgstr "ፈልግ፦"
 #. GList           *seriesids;
 #: src/yelp-view-toc.c:183
 msgid "Help Contents"
-msgstr "የመረጃ ይዞታዎች"
+msgstr "የመረጃ ማውጫ"
 
 #: src/yelp-view-toc.c:184
 msgid "GNOME - Desktop"
