--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-12-10  Daniel Yacob  <locales@geez.org>
+
+	* am.po: Updated Amharic translations.
+
 2002-11-23  Christian Neumair  <chris@gnome-de.org>
 
 	* de.po: Updated German translation.
