--- a/po/sq.po
+++ b/po/sq.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "POT-Creation-Date: 2002-11-05 05:10+0100\n"
-"PO-Revision-Date: 2002-11-05 15:43+0100\n"
+"PO-Revision-Date: 2002-12-11 18:03+0100\n"
 "Last-Translator: Laurent Dhima <laurenti@alblinux.net>\n"
 "Language-Team: albanian < gnome-albanian-perkthyesit@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -155,7 +155,7 @@ msgstr "Software i Lirë"
 
 #: src/yelp-view-toc.c:733
 msgid "(C)"
-msgstr "(C)"
+msgstr "©"
 
 #: src/yelp-window.c:159
 msgid "/_File"
