--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-12-11  Laurent Dhima  <laurenti@alblinux.net>
+
+	* sq.po: Updated Albanian translation.
+	
 2002-12-10  Daniel Yacob  <locales@geez.org>
 
 	* am.po: Updated Amharic translations.
