--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2002-12-12  Christian Neumair  <chris@gnome-de.org>
+
+	* POTFILES.in: Added data/ui/yelp.glade.
+	* de.po: Updated German translation.
+
 2002-12-11  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation from
