--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-12-13  Daniel Yacob  <locales@geez.org>
+
+	* am.po: Updated Amharic translations.
+
 2002-12-12  Christian Neumair  <chris@gnome-de.org>
 
 	* POTFILES.in: Added data/ui/yelp.glade.
