--- a/po/cs.po
+++ b/po/cs.po
@@ -6,14 +6,46 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Yelp 2.1.x\n"
-"POT-Creation-Date: 2002-11-28 15:13+0100\n"
-"PO-Revision-Date: 2002-11-28 15:15GMT\n"
+"POT-Creation-Date: 2002-12-14 09:44+0100\n"
+"PO-Revision-Date: 2002-12-14 09:44GMT\n"
 "Last-Translator: Michal Bukovjan <bukm@centrum.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 0.9.6\n"
+
+#: data/ui/yelp.glade.h:1
+msgid "*"
+msgstr "*"
+
+#: data/ui/yelp.glade.h:2
+msgid "<b>Find text in the document:</b>"
+msgstr "<b>Najít v dokumentu text:</b>"
+
+#: data/ui/yelp.glade.h:3
+msgid "Automatically _wrap around"
+msgstr "Automaticky _zalamovat"
+
+#: data/ui/yelp.glade.h:4
+msgid "Find text..."
+msgstr "Najít text..."
+
+#: data/ui/yelp.glade.h:5
+msgid "Match _entire word"
+msgstr "Pouze c_elá slova"
+
+#: data/ui/yelp.glade.h:6
+msgid "_Match upper/lower case"
+msgstr "Rozlišovat _malá a velká písmena"
+
+#: data/ui/yelp.glade.h:7
+msgid "_Next"
+msgstr "_Následující"
+
+#: data/ui/yelp.glade.h:8
+msgid "_Previous"
+msgstr "_Předchozí"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -268,4 +300,3 @@ msgstr "Poradí s prostředím GNOME"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Nápověda"
-
