Updated Danish translation.
2002-12-14  Ole Laursen  <olau@hardworking.dk>

	* da.po: Updated Danish translation.

--- a/po/da.po
+++ b/po/da.po
@@ -5,13 +5,45 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 0.1\n"
-"POT-Creation-Date: 2002-11-25 22:43+0100\n"
-"PO-Revision-Date: 2002-11-25 22:44+0100\n"
+"POT-Creation-Date: 2002-12-14 14:43+0100\n"
+"PO-Revision-Date: 2002-12-14 14:43+0100\n"
 "Last-Translator: Ole Laursen <olau@hardworking.dk>\n"
 "Language-Team: Danish <dansk@klid.dk>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+#: data/ui/yelp.glade.h:1
+msgid "*"
+msgstr "*"
+
+#: data/ui/yelp.glade.h:2
+msgid "<b>Find text in the document:</b>"
+msgstr "<b>Find tekst i dokumentet:</b>"
+
+#: data/ui/yelp.glade.h:3
+msgid "Automatically _wrap around"
+msgstr "Søg automatisk _forfra"
+
+#: data/ui/yelp.glade.h:4
+msgid "Find text..."
+msgstr "Find tekst..."
+
+#: data/ui/yelp.glade.h:5
+msgid "Match _entire word"
+msgstr "Find _hele ord"
+
+#: data/ui/yelp.glade.h:6
+msgid "_Match upper/lower case"
+msgstr "_Skeln mellem store/små bogstaver"
+
+#: data/ui/yelp.glade.h:7
+msgid "_Next"
+msgstr "_Næste"
+
+#: data/ui/yelp.glade.h:8
+msgid "_Previous"
+msgstr "_Forrige"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
