--- a/po/hu.po
+++ b/po/hu.po
@@ -2,17 +2,50 @@
 # Copyright (C) 2002 Free Software Foundation, Inc.
 # Szabolcs Ban <shooby@gnome.hu>, 2002.
 # Emese Kovacs <emese@gnome.hu>, 2002.
+# Andras Timar <timar@gnome.hu>, 2002.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp VERSION\n"
-"POT-Creation-Date: 2002-12-02 16:20+0100\n"
-"PO-Revision-Date: 2002-12-02 16:21+0100\n"
-"Last-Translator: Szabolcs Ban <shooby@gnome.hu>\n"
-"Language-Team: Hungarian <hu@li.org>\n"
+"POT-Creation-Date: 2002-12-14 18:18+0100\n"
+"PO-Revision-Date: 2002-12-14 18:26+0100\n"
+"Last-Translator: Andras Timar <timar@gnome.hu>\n"
+"Language-Team: Hungarian <hu@gnome.hu>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+#: data/ui/yelp.glade.h:1
+msgid "*"
+msgstr "*"
+
+#: data/ui/yelp.glade.h:2
+msgid "<b>Find text in the document:</b>"
+msgstr "<b>Szöveg keresése a dokumentumban:</b>"
+
+#: data/ui/yelp.glade.h:3
+msgid "Automatically _wrap around"
+msgstr "Keresés _folytatása a dokumentum elejétől"
+
+#: data/ui/yelp.glade.h:4
+msgid "Find text..."
+msgstr "Szöveg keresése..."
+
+#: data/ui/yelp.glade.h:5
+msgid "Match _entire word"
+msgstr "Teljes _szó"
+
+#: data/ui/yelp.glade.h:6
+msgid "_Match upper/lower case"
+msgstr "_Kis- és nagybetűk figyelembe vétele"
+
+#: data/ui/yelp.glade.h:7
+msgid "_Next"
+msgstr "_Következő"
+
+#: data/ui/yelp.glade.h:8
+msgid "_Previous"
+msgstr "_Előző"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -155,7 +188,7 @@ msgstr "Szabad szoftver"
 
 #: src/yelp-view-toc.c:714
 msgid "(C)"
-msgstr "(C)"
+msgstr "©"
 
 #: src/yelp-window.c:163
 msgid "/_File"
