--- a/po/fr.po
+++ b/po/fr.po
@@ -8,13 +8,45 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 2.1.2\n"
-"POT-Creation-Date: 2002-12-11 20:37+0100\n"
-"PO-Revision-Date: 2002-12-11 20:31+0100\n"
-"Last-Translator: Jean-Michel Ardantz <jmardantz@ifrance.com>\n"
+"POT-Creation-Date: 2002-12-15 18:29+0100\n"
+"PO-Revision-Date: 2002-12-15 18:26+0100\n"
+"Last-Translator: Christophe Merlet (RedFox) <redfox@redfoxcenter.org>\n"
 "Language-Team: GNOME French Team <gnomefr@traduc.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+#: data/ui/yelp.glade.h:1
+msgid "*"
+msgstr "*"
+
+#: data/ui/yelp.glade.h:2
+msgid "<b>Find text in the document:</b>"
+msgstr "<b>Rechercher le texte dans le document :</b>"
+
+#: data/ui/yelp.glade.h:3
+msgid "Automatically _wrap around"
+msgstr "_Césurer automatiquement"
+
+#: data/ui/yelp.glade.h:4
+msgid "Find text..."
+msgstr "Rechercher le texte..."
+
+#: data/ui/yelp.glade.h:5
+msgid "Match _entire word"
+msgstr "Correspond au mot _entier"
+
+#: data/ui/yelp.glade.h:6
+msgid "_Match upper/lower case"
+msgstr "_Correspondance majuscule/minuscule"
+
+#: data/ui/yelp.glade.h:7
+msgid "_Next"
+msgstr "_Suivant"
+
+#: data/ui/yelp.glade.h:8
+msgid "_Previous"
+msgstr "_Précédent"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
