--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-12-16 Hasbullah bin Pit <sebol@ikhlas.com
+
+	* ms.po: Updated Malay translation.
+
 2002-12-15  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
