--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,26 @@
+Changes in 2.1.3:
+-----------------
+
+* Multihead fix                                 (Mark McLoughlin)
+* Updated translations 
+  (be, fr, hu, da, nl, am, de, fr, sq,
+   bg, zh_CN, sv, pt_BR, ca, no, ms)            (Dmitry G. Mastrukov
+                                                 Christophe Merlet
+                                                 Andras Timar
+                                                 Ole Laursen
+                                                 Vincent van Adrighem
+                                                 Daniel Yacob 
+                                                 Christian Neumair
+                                                 Jean-Michel Ardantz
+                                                 Laurent Dhima
+                                                 Alexander Shopov
+                                                 He Qiangqiang
+                                                 Christian Rose
+                                                 Evandro Fernandes Giovanini
+                                                 Jordi Mallach
+                                                 Kjartan Maraas
+                                                 Hasbullah bin Pit)
+                                                                                                              
 Changes in 2.1.2:
 -----------------
 
