--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2002-12-16  Richard Hult  <rhult@codefactory.se>
+
+	* Release 2.1.3
+	
+	* NEWS: Updated for 2.1.3
+	
+	* configure.in: Bumped to 2.1.3
+
+	* src/yelp-main.c: Fix warning.
+
 2002-11-18  Fernando Herrera <fherrera@onirica.com>
 
 	* yelp.desktop.in: add X-GNOME-BUGZILLA stuff
