--- a/po/sv.po
+++ b/po/sv.po
@@ -8,13 +8,45 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2002-11-29 17:45+0100\n"
+"POT-Creation-Date: 2002-12-16 09:34+0100\n"
 "PO-Revision-Date: 2002-11-29 17:46+0100\n"
 "Last-Translator: Christian Rose <menthos@menthos.com>\n"
 "Language-Team: Swedish <sv@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+#: data/ui/yelp.glade.h:1
+msgid "*"
+msgstr "*"
+
+#: data/ui/yelp.glade.h:2
+msgid "<b>Find text in the document:</b>"
+msgstr "<b>Sök text i dokumentet:</b>"
+
+#: data/ui/yelp.glade.h:3
+msgid "Automatically _wrap around"
+msgstr "_Radbryt automatiskt"
+
+#: data/ui/yelp.glade.h:4
+msgid "Find text..."
+msgstr "Sök text..."
+
+#: data/ui/yelp.glade.h:5
+msgid "Match _entire word"
+msgstr "Matcha _hela ordet"
+
+#: data/ui/yelp.glade.h:6
+msgid "_Match upper/lower case"
+msgstr "_Matcha stora/små bokstäver"
+
+#: data/ui/yelp.glade.h:7
+msgid "_Next"
+msgstr "_Nästa"
+
+#: data/ui/yelp.glade.h:8
+msgid "_Previous"
+msgstr "_Föregående"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -24,12 +56,12 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Yelp-fabrik"
 
-#: src/yelp-main.c:115
+#: src/yelp-main.c:117
 #, c-format
 msgid "Could not activate Yelp: '%s'"
 msgstr "Kunde inte aktivera Yelp: \"%s\""
 
-#: src/yelp-main.c:134
+#: src/yelp-main.c:136
 msgid "Could not open new window."
 msgstr "Kunde inte öppna nytt fönster."
 
@@ -272,30 +304,6 @@ msgstr "Få hjälp med GNOME"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Hjälp"
-
-#~ msgid "*"
-#~ msgstr "*"
-
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>Sök text i dokumentet:</b>"
-
-#~ msgid "Automatically _wrap around"
-#~ msgstr "_Radbryt automatiskt"
-
-#~ msgid "Find text..."
-#~ msgstr "Sök text..."
-
-#~ msgid "Match _entire word"
-#~ msgstr "Matcha _hela ordet"
-
-#~ msgid "_Match upper/lower case"
-#~ msgstr "_Matcha stora/små bokstäver"
-
-#~ msgid "_Next"
-#~ msgstr "_Nästa"
-
-#~ msgid "_Previous"
-#~ msgstr "_Föregående"
 
 #~ msgid ""
 #~ "Error while parsing the stylesheet, make sure you have your docbook "
