--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-12-17 German Poo Caaman~o <gpoo@ubiobio.cl>
+
+	* es.po: Updated Spanish translation.
+
 2002-12-16 Hasbullah bin Pit <sebol@ikhlas.com
 
 	* ms.po: Updated Malay translation.
