--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-12-20  Daniel Yacob  <locales@geez.org>
+
+	* am.po: Updated Amharic translations.
+
 2002-12-17 German Poo Caaman~o <gpoo@ubiobio.cl>
 
 	* es.po: Updated Spanish translation.
