--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-12-29  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* wa.po: updated Walloon file
+
 2002-12-22  Artis Trops  <hornet@navigator.lv>
 
 	* lv.po: Updated Latvian translation.
