Updated Amharic translation.

--- a/po/am.po
+++ b/po/am.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp 1.0\n"
 "POT-Creation-Date: 2002-10-03 05:37+0200\n"
-"PO-Revision-Date: 2002-12-10 19:37+EDT\n"
+"PO-Revision-Date: 2002-12-29 19:37+EDT\n"
 "Last-Translator: Ge'ez Frontier Foundation <locales@geez.org>\n"
 "Language-Team: Amharic <locales@geez.org>\n"
 "MIME-Version: 1.0\n"
@@ -140,7 +140,7 @@ msgstr "ሰነዶች"
 
 #: src/yelp-view-toc.c:385 src/yelp-view-toc.c:512 src/yelp-view-toc.c:793
 msgid "Categories"
-msgstr "ምድብ"
+msgstr "ምድቦች"
 
 #: src/yelp-view-toc.c:466
 msgid "Manual pages"
